Release v1.3.3
  - Interface:
    - Added choice autocompletion (press tab with an incomplete choice in the input area)
  - General Fixes:
    - Accepted input even if input field is empty (waste of processing power)
    - Achievements were not correctly loaded from files (meaning they were not kept when saved)
	- Removing a weapon from the player's inventory uneqipped the player's weapon
  - Modmakers:
    - Kills are now increased upon killing an enemy
	- Rewards json array name changed from "rewardMethods" to "rewards"
  - Vanilla TextFighter:
    - Additions:
      - Added the shield tool
	    - Make yourself invinsible for 1 turn during a fight (negating your enemy's next attack)
	    - Crafted at the forge for 25 metal scraps and 15 wood
		- One durability is used each time the shield is used
    - Interfaces:
	  - Kills are now shown in the player stats interface
    - Fixes:
      - Rewards were not given when killing the lumberjack
      - No reward string was displayed for coins and experience when miner is killed
      - Lumberjack guide does not say that axe can be dropped
      - Executioner enemy guide has typo
      - sorcerer magic drop required a special item that did not exist (“manapouch”)
      - Fixed various guide and game text typos
      - Reduced coin and experience reward of most enemies
	  - Error upon using the `woodaxe` choice in the forest location (which caused axe durability to be unchanged)
      - Many of the enemies did not give rewards when killed
	  - The leaf disguise could not be crafted in the crafting hut
	  - Total protection from armor and other items is now shown in player stats interface

Release v1.3.2
  - Modmakers:
    - Achievement rewards can now have requirements
    - The fists weapon is now not duplicated (which caused it to show multiple times in various places)
    - Added Vanilla Custom variable “priceAtWeaponSmith” to weapons
    - Added custom variable “canBeBoughtAtWeaponsmith” to weapons