@@ -1133,7 +1133,7 @@ public class Player {
     public void removeFromInventory(String name, String type) {
         for(int i=0;i<inventory.size();i++) {
             if(name.equals(inventory.get(i).getName()) && type.equals(inventory.get(i).getItemType())) {
-                if(name.equals(currentWeapon)) { setCurrentWeapon(null); }
+                if(currentWeapon != null && name.equals(currentWeapon.getName())) { setCurrentWeapon(null); } //sets to fists
 				inventory.remove(i);
 				TextFighter.addToOutput("'" + name + "' has been removed from your inventory");
                 return;
